--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ kotlin {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.24.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.30.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.okio:okio:1.15.0'
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -61,7 +61,7 @@ publish {
     userOrg = 'donaldyen'
     groupId = 'com.stainberg.sloth'
     artifactId = 'sloth-http'
-    publishVersion = '1.0.6'
+    publishVersion = '1.0.7'
     desc = 'with coroutines & okhttp'
     website = 'https://github.com/stainberg/sloth-restme'
 }
